tests/ValidPrograms/Test8/test8.c
int bonjour(int coucou, int alpha){
	int c=coucou+alpha;
	return 2*c;
}
int main(){
	bonjour(1,1);
	return bonjour(1,1);
}
