tests/SyntaxError/Test26/test26.c
int main()
{
	int i=0;	
	for (i=0; ; i=i+1 ){
		int a=i*2;	
	}

}

